SERVER-531 killCursors no longer affects lastError